--- a/src/pages/lineal/lineal.scss
+++ b/src/pages/lineal/lineal.scss
@@ -3,4 +3,40 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  .ant-steps-item-process .ant-steps-item-icon {
+    background-color: #4a1942;
+    border-color: #4a1942;
+  }
+
+  .ant-steps-item-finish .ant-steps-item-icon {
+    border-color: #4a1942;
+    color: #4a1942;
+    svg {
+      color: #4a1942 !important;
+    }
+  }
+  h2 {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #4a1942;
+  }
+
+  &-content {
+    margin-top: 5px;
+    padding: 50px;
+    background-color: white;
+
+    .steps-content {
+      margin-top: 16px;
+      border: 1px dashed #e9e9e9;
+      border-radius: 2px;
+      background-color: #fafafa;
+      min-height: 200px;
+      text-align: center;
+    }
+
+    .steps-action {
+      margin-top: 24px;
+    }
+  }
 }
