-Lineal Inputs Finished

--- a/src/forms/AlternativesForm/AlternativesForm.scss
+++ b/src/forms/AlternativesForm/AlternativesForm.scss
@@ -32,6 +32,7 @@
 
   .ant-btn-primary {
     background-color: white;
+    margin: 10px;
     border: 1px solid #e71d36;
     color: #e71d36;
     &:hover,
