--- a/src/pages/lineal/lineal.scss
+++ b/src/pages/lineal/lineal.scss
@@ -25,6 +25,7 @@
     margin-top: 5px;
     padding: 50px;
     background-color: white;
+    min-width: 50%;
 
     .steps-content {
       margin-top: 16px;
