-Finished Form Inputs

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,6 +5,12 @@
   justify-content: center;
   min-height: 60vh;
 
+  h1 {
+    font-weight: bold;
+    color: #4a1942;
+    margin-bottom: 50px;
+  }
+
   .ant-btn {
     height: 50px !important;
     width: 200px;
