--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 50px;
+  justify-content: center;
   height: 75px;
   background-color: #e71d36;
   box-shadow: 0px 0px 15px gray;
-  h3 {
+  h2 {
     color: white;
     font-weight: bold;
   }
